Open in org button

--- a/src/pages/record/record.html
+++ b/src/pages/record/record.html
@@ -194,6 +194,7 @@
                 <div class="record-info">
                     <span class="object-name" id="objectName">Loading...</span>
                     <span class="record-id" id="recordId"></span>
+                    <button id="openInOrgBtn" class="button-neutral" style="margin-left: auto; padding: 4px 12px; font-size: 12px;">Open in Org</button>
                     <span id="status" class="status-badge"></span>
                 </div>
 
