--- a/src/pages/aura/aura.html
+++ b/src/pages/aura/aura.html
@@ -6,442 +6,9 @@
     <title>Aura Debugger - sftools</title>
     <link rel="icon" type="image/png" href="../../icon.png">
     <link rel="stylesheet" href="../../style.css">
-    <style>
-        /* Aura-specific standalone styles */
-        .standalone-header {
-            display: flex;
-            align-items: center;
-            background: var(--nav-bg);
-            border-bottom: 2px solid var(--border-color);
-            padding: 0 20px;
-            height: 50px;
-            flex-shrink: 0;
-            box-shadow: 0 2px 2px 0 rgba(0, 0, 0, 0.05);
-        }
-        .standalone-header .nav-brand {
-            display: flex;
-            align-items: center;
-            gap: 8px;
-            font-weight: 700;
-            font-size: 18px;
-            color: var(--primary-color);
-            letter-spacing: -0.5px;
-        }
-        .standalone-header .nav-brand img {
-            height: 24px;
-            width: auto;
-        }
-        .standalone-header .tool-name {
-            font-size: 14px;
-            color: var(--text-muted);
-            border-left: 1px solid var(--border-color);
-            padding-left: 15px;
-            margin-left: 15px;
-        }
-        .radio-group {
-            display: flex;
-            gap: 20px;
-        }
-        .radio-item {
-            display: flex;
-            align-items: center;
-            gap: 6px;
-            cursor: pointer;
-            font-size: 14px;
-        }
-        .radio-item input[type="radio"] {
-            margin: 0;
-        }
-        .auth-panel {
-            margin-top: 10px;
-            padding: 12px;
-            background-color: #f8f9fa;
-            border: 1px solid var(--border-color);
-            border-radius: 4px;
-        }
-        .auth-panel.hidden {
-            display: none;
-        }
-        .grid-row {
-            display: grid;
-            grid-template-columns: 1fr 1fr;
-            gap: 15px;
-        }
-        .font-mono {
-            font-family: 'SF Mono', Monaco, Consolas, 'Courier New', monospace;
-        }
-        .text-xs {
-            font-size: 12px;
-        }
-        .text-sm {
-            font-size: 13px;
-        }
-        details {
-            margin-top: 15px;
-        }
-        details summary {
-            cursor: pointer;
-            font-size: 13px;
-            color: var(--text-muted);
-            font-weight: 500;
-        }
-        details .details-content {
-            margin-top: 10px;
-            padding: 10px;
-            background-color: #f8f9fa;
-            border-radius: 4px;
-        }
-        .actions-bar {
-            display: flex;
-            align-items: center;
-            gap: 15px;
-            margin: 15px 0;
-        }
-        .resizer {
-            height: 8px;
-            background: var(--border-color);
-            cursor: row-resize;
-            display: flex;
-            align-items: center;
-            justify-content: center;
-            border-radius: 0 0 4px 4px;
-        }
-        .resizer-grip {
-            width: 40px;
-            height: 3px;
-            background: #999;
-            border-radius: 2px;
-        }
-        .resizer:hover, .resizer.resizing {
-            background: var(--primary-color);
-        }
-        .resizer:hover .resizer-grip, .resizer.resizing .resizer-grip {
-            background: #fff;
-        }
-
-        /* Disclaimer Modal */
-        .disclaimer-overlay {
-            position: fixed;
-            top: 0;
-            left: 0;
-            right: 0;
-            bottom: 0;
-            background: rgba(0, 0, 0, 0.7);
-            display: flex;
-            align-items: center;
-            justify-content: center;
-            z-index: 10000;
-        }
-        .disclaimer-overlay.hidden {
-            display: none;
-        }
-        .disclaimer-modal {
-            background: #fff;
-            border-radius: 8px;
-            max-width: 600px;
-            width: 90%;
-            max-height: 90vh;
-            overflow-y: auto;
-            box-shadow: 0 20px 60px rgba(0, 0, 0, 0.3);
-        }
-        .disclaimer-header {
-            background: linear-gradient(135deg, #d93025 0%, #b31412 100%);
-            color: #fff;
-            padding: 20px 24px;
-            border-radius: 8px 8px 0 0;
-        }
-        .disclaimer-header h2 {
-            margin: 0;
-            font-size: 20px;
-            display: flex;
-            align-items: center;
-            gap: 10px;
-        }
-        .disclaimer-header .warning-icon {
-            font-size: 24px;
-        }
-        .disclaimer-body {
-            padding: 24px;
-        }
-        .disclaimer-body h3 {
-            color: #1a1a1a;
-            font-size: 16px;
-            margin: 0 0 12px 0;
-        }
-        .disclaimer-body p {
-            color: #444;
-            font-size: 14px;
-            line-height: 1.6;
-            margin: 0 0 16px 0;
-        }
-        .disclaimer-body ul {
-            margin: 0 0 16px 0;
-            padding-left: 20px;
-            color: #444;
-            font-size: 14px;
-            line-height: 1.8;
-        }
-        .disclaimer-body li {
-            margin-bottom: 4px;
-        }
-        .disclaimer-warning-box {
-            background: #fef3f2;
-            border: 1px solid #fecaca;
-            border-left: 4px solid #d93025;
-            padding: 12px 16px;
-            border-radius: 4px;
-            margin-bottom: 20px;
-        }
-        .disclaimer-warning-box p {
-            margin: 0;
-            color: #991b1b;
-            font-weight: 500;
-        }
-        .disclaimer-checkbox-container {
-            display: flex;
-            align-items: flex-start;
-            gap: 12px;
-            padding: 16px;
-            background: #f8f9fa;
-            border: 1px solid var(--border-color);
-            border-radius: 6px;
-            margin-bottom: 20px;
-            cursor: pointer;
-        }
-        .disclaimer-checkbox-container:hover {
-            background: #f0f1f2;
-        }
-        .disclaimer-checkbox-container input[type="checkbox"] {
-            margin-top: 2px;
-            width: 18px;
-            height: 18px;
-            cursor: pointer;
-        }
-        .disclaimer-checkbox-container label {
-            font-size: 14px;
-            color: #1a1a1a;
-            cursor: pointer;
-            line-height: 1.5;
-        }
-        .disclaimer-footer {
-            display: flex;
-            justify-content: flex-end;
-            gap: 12px;
-        }
-        .disclaimer-btn {
-            padding: 10px 24px;
-            border-radius: 4px;
-            font-size: 14px;
-            font-weight: 600;
-            cursor: pointer;
-            border: none;
-            transition: all 0.15s ease;
-        }
-        .disclaimer-btn-cancel {
-            background: #e5e7eb;
-            color: #374151;
-        }
-        .disclaimer-btn-cancel:hover {
-            background: #d1d5db;
-        }
-        .disclaimer-btn-accept {
-            background: #0070d2;
-            color: #fff;
-        }
-        .disclaimer-btn-accept:hover:not(:disabled) {
-            background: #005bb5;
-        }
-        .disclaimer-btn-accept:disabled {
-            background: #94a3b8;
-            cursor: not-allowed;
-        }
-        .main-content-disabled {
-            pointer-events: none;
-            opacity: 0.3;
-            filter: blur(2px);
-        }
-    </style>
 </head>
 <body>
-    <!-- Disclaimer Modal -->
-    <div id="disclaimerOverlay" class="disclaimer-overlay">
-        <div class="disclaimer-modal">
-            <div class="disclaimer-header">
-                <h2><span class="warning-icon">&#9888;</span> Important: Authorized Use Only</h2>
-            </div>
-            <div class="disclaimer-body">
-                <h3>What This Tool Does</h3>
-                <p>
-                    The Aura Debugger allows you to send requests to the Salesforce Aura framework,
-                    which powers Lightning Experience and Salesforce Communities. This tool can retrieve
-                    data, execute Apex code, and interact with Salesforce components on your behalf.
-                </p>
-
-                <div class="disclaimer-warning-box">
-                    <p>
-                        This tool should only be used on Salesforce orgs and communities where you have
-                        explicit authorization to perform debugging and development activities.
-                    </p>
-                </div>
-
-                <h3>Authorized Use Includes</h3>
-                <ul>
-                    <li>Debugging and testing on Salesforce orgs where you are an authorized administrator or developer</li>
-                    <li>Development and testing on sandbox or scratch orgs assigned to you</li>
-                    <li>Security testing with explicit written authorization from the org owner</li>
-                    <li>Educational purposes on your own personal developer org</li>
-                    <li>Legitimate troubleshooting as part of your job responsibilities</li>
-                </ul>
-
-                <h3>Prohibited Use Includes</h3>
-                <ul>
-                    <li>Accessing or attempting to access Salesforce orgs without authorization</li>
-                    <li>Extracting, scraping, or exfiltrating data you are not authorized to access</li>
-                    <li>Attempting to bypass security controls, authentication, or access restrictions</li>
-                    <li>Probing or testing orgs belonging to other organizations without written consent</li>
-                    <li>Any activity that violates Salesforce's Terms of Service or Acceptable Use Policy</li>
-                    <li>Any activity that violates applicable laws or regulations</li>
-                </ul>
-
-                <h3>Your Responsibility</h3>
-                <p>
-                    By using this tool, you accept full responsibility for ensuring your use is authorized
-                    and lawful. Unauthorized access to computer systems is a serious offense that may result
-                    in civil liability and criminal prosecution under laws such as the Computer Fraud and
-                    Abuse Act (CFAA) in the United States and similar laws in other jurisdictions.
-                </p>
-
-                <p>
-                    The developers of this tool accept no responsibility for misuse. This tool is provided
-                    for legitimate development and debugging purposes only.
-                </p>
-
-                <div class="disclaimer-checkbox-container">
-                    <input type="checkbox" id="disclaimerCheckbox">
-                    <label for="disclaimerCheckbox">
-                        I confirm that I have authorization to use this tool on the Salesforce org(s) I intend
-                        to access, and I understand that I am solely responsible for ensuring my use complies
-                        with all applicable laws, regulations, and Salesforce's Terms of Service.
-                    </label>
-                </div>
-
-                <div class="disclaimer-footer">
-                    <button class="disclaimer-btn disclaimer-btn-cancel" id="disclaimerCancel">Cancel</button>
-                    <button class="disclaimer-btn disclaimer-btn-accept" id="disclaimerAccept" disabled>I Understand &amp; Accept</button>
-                </div>
-            </div>
-        </div>
-    </div>
-
-    <header class="standalone-header">
-        <div class="nav-brand"><img src="../../icon.png" alt="">sftools</div>
-        <span class="tool-name">Aura Debugger</span>
-    </header>
-
-    <main class="content-area">
-        <header class="page-header">
-            <h1>Salesforce Aura Debugger</h1>
-        </header>
-
-        <div class="card">
-            <div class="card-header">
-                <div class="card-header-icon" style="background-color: #f39e58;">A</div>
-                <h2>Request Configuration</h2>
-            </div>
-            <div class="card-body">
-                <div class="form-element">
-                    <label for="communityUrl">Community URL</label>
-                    <input type="text" id="communityUrl" class="input" placeholder="https://mycommunity.force.com/s">
-                </div>
-
-                <div class="form-element">
-                    <label>Authentication Mode</label>
-                    <div class="radio-group">
-                        <label class="radio-item">
-                            <input type="radio" name="authMode" value="unauth" checked>
-                            <span>Unauthenticated</span>
-                        </label>
-                        <label class="radio-item">
-                            <input type="radio" name="authMode" value="auth">
-                            <span>Authenticated (Aura Token)</span>
-                        </label>
-                    </div>
-                </div>
-
-                <div id="authFields" class="auth-panel hidden">
-                    <div class="form-element">
-                        <label for="authToken">Aura Token</label>
-                        <input type="text" id="authToken" class="input font-mono text-xs" placeholder="eyJ...">
-                    </div>
-                    <div class="form-element" style="margin-bottom: 0;">
-                        <label for="authSid">Session ID (SID) <span style="font-weight: normal; text-transform: none;">&mdash; leave blank to use browser cookie</span></label>
-                        <input type="text" id="authSid" class="input font-mono text-xs" placeholder="00D...">
-                    </div>
-                </div>
-
-                <div class="grid-row">
-                    <div class="form-element">
-                        <label for="methodSelector">Method Type</label>
-                        <select id="methodSelector" class="select">
-                            <option value="getItems" selected>SelectableListDataProvider (Get Items)</option>
-                            <option value="getObjectInfo">RecordUiController (Get Object Info)</option>
-                            <option value="getConfigData">HostConfigController (Get Config Data)</option>
-                            <option value="auraCmpDef">Component Definition (auraCmpDef)</option>
-                            <option value="apex">ApexActionController (Execute)</option>
-                            <option value="custom">Custom Definition</option>
-                        </select>
-                    </div>
-                    <div class="form-element">
-                        <label for="methodDescriptor">Method Descriptor</label>
-                        <input type="text" id="methodDescriptor" class="input font-mono text-sm"
-                            value="serviceComponent://ui.force.components.controllers.lists.selectableListDataProvider.SelectableListDataProviderController/ACTION$getItems"
-                            disabled
-                            style="background-color: #f3f4f6;">
-                    </div>
-                </div>
-
-                <details>
-                    <summary>Advanced Config (FWUID)</summary>
-                    <div class="details-content">
-                        <div class="form-element" style="margin-bottom: 0;">
-                            <label for="fwuid">Framework UID (fwuid)</label>
-                            <input type="text" id="fwuid" class="input font-mono text-xs"
-                                value="eE5UbjZPdVlRT3M0d0xtOXc5MzVOQWg5TGxiTHU3MEQ5RnBMM0VzVXc1cmcxMi42MjkxNDU2LjE2Nzc3MjE2">
-                        </div>
-                    </div>
-                </details>
-            </div>
-        </div>
-
-        <div class="card">
-            <div class="card-header">
-                <div class="card-header-icon" style="background-color: #0070d2;">P</div>
-                <h2>Request Parameters</h2>
-            </div>
-            <div class="card-body">
-                <monaco-editor id="paramsEditor" class="monaco-container" language="json"></monaco-editor>
-            </div>
-        </div>
-
-        <div class="actions-bar">
-            <button id="executeBtn" class="button-brand">Execute Request</button>
-            <span id="status" class="status-badge">Ready</span>
-        </div>
-
-        <div class="card">
-            <div class="card-header">
-                <div class="card-header-icon" style="background-color: #4bca81;">R</div>
-                <h2>Response</h2>
-            </div>
-            <div class="card-body" style="padding-bottom: 0;">
-                <monaco-editor id="responseEditor" class="monaco-container monaco-container-lg" language="json" readonly></monaco-editor>
-                <div id="responseResizer" class="resizer">
-                    <div class="resizer-grip"></div>
-                </div>
-            </div>
-        </div>
-    </main>
-
+    <aura-page></aura-page>
     <script type="module" src="aura.js"></script>
 </body>
 </html>
