--- a/src/pages/record/record.html
+++ b/src/pages/record/record.html
@@ -6,219 +6,9 @@
     <title>Record Viewer - sftools</title>
     <link rel="icon" type="image/png" href="../../icon.png">
     <link rel="stylesheet" href="../../style.css">
-    <style>
-        .standalone-header {
-            display: flex;
-            align-items: center;
-            background: var(--nav-bg);
-            border-bottom: 2px solid var(--border-color);
-            padding: 0 20px;
-            height: 50px;
-            flex-shrink: 0;
-            box-shadow: 0 2px 2px 0 rgba(0, 0, 0, 0.05);
-        }
-        .standalone-header .nav-brand {
-            display: flex;
-            align-items: center;
-            gap: 8px;
-            font-weight: 700;
-            font-size: 18px;
-            color: var(--primary-color);
-            letter-spacing: -0.5px;
-        }
-        .standalone-header .nav-brand img {
-            height: 24px;
-            width: auto;
-        }
-        .standalone-header .tool-name {
-            font-size: 14px;
-            color: var(--text-muted);
-            border-left: 1px solid var(--border-color);
-            padding-left: 15px;
-            margin-left: 15px;
-        }
-
-        .record-info {
-            display: flex;
-            align-items: center;
-            gap: 15px;
-            margin-bottom: 15px;
-            padding: 10px 15px;
-            background: #f8f9fa;
-            border-radius: 4px;
-        }
-        .record-info .object-name {
-            font-weight: 600;
-            color: var(--primary-color);
-        }
-        .record-info .record-id {
-            font-family: 'SF Mono', Monaco, Consolas, monospace;
-            font-size: 13px;
-            color: var(--text-muted);
-        }
-
-        .fields-container {
-            max-height: calc(100vh - 350px);
-            overflow-y: auto;
-        }
-
-        .field-row {
-            display: grid;
-            grid-template-columns: 200px 200px 100px 1fr 250px;
-            gap: 15px;
-            padding: 8px 0;
-            border-bottom: 1px solid var(--border-color);
-            align-items: center;
-        }
-        .field-row:last-child {
-            border-bottom: none;
-        }
-        .field-label {
-            font-weight: 500;
-            color: var(--text-main);
-            font-size: 13px;
-        }
-        .field-api-name {
-            font-family: 'SF Mono', Monaco, Consolas, monospace;
-            font-size: 12px;
-            color: var(--text-muted);
-            overflow: hidden;
-            text-overflow: ellipsis;
-            white-space: nowrap;
-        }
-        .field-value {
-            min-width: 0;
-        }
-        .field-value input {
-            width: 100%;
-            font-size: 13px;
-        }
-        .field-value input:disabled {
-            background-color: #f3f4f6;
-            cursor: not-allowed;
-            color: var(--text-muted);
-        }
-
-        .field-row.modified .field-label {
-            color: var(--primary-color);
-        }
-        .field-row.modified .field-value input {
-            border-color: var(--primary-color);
-            background-color: #f0f7ff;
-        }
-
-        .actions-bar {
-            display: flex;
-            align-items: center;
-            gap: 15px;
-            margin: 20px 0;
-            padding-top: 15px;
-            border-top: 1px solid var(--border-color);
-        }
-
-        .save-btn:disabled {
-            opacity: 0.5;
-            cursor: not-allowed;
-        }
-
-        .change-count {
-            font-size: 13px;
-            color: var(--text-muted);
-        }
-
-        .error-container {
-            padding: 30px;
-            text-align: center;
-        }
-        .error-container .error-message {
-            color: #c23934;
-            margin-bottom: 10px;
-            font-weight: 500;
-        }
-        .error-container .error-hint {
-            color: var(--text-muted);
-            font-size: 13px;
-        }
-
-        .loading-container {
-            padding: 30px;
-            text-align: center;
-            color: var(--text-muted);
-        }
-
-        .field-header {
-            display: grid;
-            grid-template-columns: 200px 200px 100px 1fr 250px;
-            gap: 15px;
-            padding: 10px 0;
-            border-bottom: 2px solid var(--border-color);
-            font-weight: 600;
-            font-size: 12px;
-            color: var(--text-muted);
-            text-transform: uppercase;
-            letter-spacing: 0.5px;
-        }
-
-        .field-type {
-            font-family: 'SF Mono', Monaco, Consolas, monospace;
-            font-size: 11px;
-            color: var(--text-muted);
-        }
-
-        .field-preview {
-            font-size: 12px;
-            color: var(--text-muted);
-        }
-        .field-preview a {
-            color: var(--primary-color);
-            text-decoration: none;
-        }
-        .field-preview a:hover {
-            text-decoration: underline;
-        }
-    </style>
 </head>
 <body>
-    <header class="standalone-header">
-        <div class="nav-brand"><img src="../../icon.png" alt="">sftools</div>
-        <span class="tool-name">Record Viewer</span>
-    </header>
-
-    <main class="content-area">
-        <div class="card">
-            <div class="card-header">
-                <div class="card-header-icon" style="background-color: #0070d2;">R</div>
-                <h2>Record Details</h2>
-            </div>
-            <div class="card-body">
-                <div class="record-info">
-                    <span class="object-name" id="objectName">Loading...</span>
-                    <span class="record-id" id="recordId"></span>
-                    <button id="openInOrgBtn" class="button-neutral" style="margin-left: auto; padding: 4px 12px; font-size: 12px;">Open in Org</button>
-                    <span id="status" class="status-badge"></span>
-                </div>
-
-                <div class="field-header">
-                    <div>Field Label</div>
-                    <div>API Name</div>
-                    <div>Type</div>
-                    <div>Value</div>
-                    <div>Preview</div>
-                </div>
-
-                <div class="fields-container" id="fieldsContainer">
-                    <div class="loading-container">Loading record data...</div>
-                </div>
-
-                <div class="actions-bar">
-                    <button id="saveBtn" class="button-brand save-btn" disabled>Save Changes</button>
-                    <button id="refreshBtn" class="button-neutral">Refresh</button>
-                    <span id="changeCount" class="change-count"></span>
-                </div>
-            </div>
-        </div>
-    </main>
-
+    <record-page></record-page>
     <script type="module" src="record.js"></script>
 </body>
 </html>
