--- a/src/pages/app/app.html
+++ b/src/pages/app/app.html
@@ -12,6 +12,11 @@
     <div class="app-container">
         
         <nav class="tab-nav">
+            <button class="hamburger-btn" aria-label="Menu">
+                <svg width="20" height="20" viewBox="0 0 20 20" fill="currentColor">
+                    <path d="M2 4.5h16a.5.5 0 010 1H2a.5.5 0 010-1zm0 5h16a.5.5 0 010 1H2a.5.5 0 010-1zm0 5h16a.5.5 0 010 1H2a.5.5 0 010-1z"/>
+                </svg>
+            </button>
             <div class="nav-brand"><img src="../../icon.png" alt="" class="nav-brand-icon">sftools</div>
             <div class="tab-scroll-container">
                 <button class="tab-link active" data-tab="query">Query</button>
@@ -64,6 +69,38 @@
                 </svg>
             </button>
         </nav>
+
+        <!-- Mobile Menu -->
+        <div class="mobile-menu">
+            <div class="mobile-menu-header">
+                <div class="nav-brand"><img src="../../icon.png" alt="" class="nav-brand-icon">sftools</div>
+                <button class="mobile-menu-close" aria-label="Close menu">
+                    <svg width="20" height="20" viewBox="0 0 20 20" fill="currentColor">
+                        <path d="M4.646 4.646a.5.5 0 01.708 0L10 9.293l4.646-4.647a.5.5 0 01.708.708L10.707 10l4.647 4.646a.5.5 0 01-.708.708L10 10.707l-4.646 4.647a.5.5 0 01-.708-.708L9.293 10 4.646 5.354a.5.5 0 010-.708z"/>
+                    </svg>
+                </button>
+            </div>
+            <div class="mobile-menu-content">
+                <nav class="mobile-nav">
+                    <button class="mobile-nav-item active" data-tab="query">Query</button>
+                    <button class="mobile-nav-item" data-tab="apex">Apex</button>
+                    <button class="mobile-nav-item" data-tab="rest-api">REST API</button>
+                    <button class="mobile-nav-item" data-tab="events">Platform Events</button>
+                    <button class="mobile-nav-item" data-tab="settings">Settings</button>
+                </nav>
+                <hr class="mobile-menu-divider">
+                <button class="mobile-nav-item" id="mobile-open-org">Open Org</button>
+                <button class="mobile-nav-item" id="mobile-open-tab">Open in Tab</button>
+                <hr class="mobile-menu-divider">
+                <div class="mobile-connection-section">
+                    <span class="mobile-section-label">Connection</span>
+                    <div class="mobile-connection-list"></div>
+                    <button class="mobile-nav-item mobile-add-connection">+ Add Connection</button>
+                    <button class="mobile-nav-item mobile-authorize hidden">Authorize</button>
+                </div>
+            </div>
+        </div>
+        <div class="mobile-menu-overlay"></div>
 
         <main class="content-area">
             <query-tab id="query" class="tab-content active"></query-tab>
