--- a/src/pages/app/app.html
+++ b/src/pages/app/app.html
@@ -37,11 +37,8 @@
 
             <!-- Connection Selector -->
             <div class="connection-selector">
-                <!-- No connections state -->
-                <button id="authorize-btn" class="button-brand connection-authorize-btn">Authorize</button>
-
-                <!-- Has connections state (hidden by default) -->
-                <div class="connection-dropdown hidden">
+                <!-- Has connections state -->
+                <div class="connection-dropdown">
                     <button class="connection-dropdown-trigger">
                         <span class="connection-label">Select Org...</span>
                         <svg width="10" height="10" viewBox="0 0 10 10" fill="currentColor">
@@ -93,10 +90,9 @@
                 <button class="mobile-nav-item" id="mobile-open-tab">Open in Tab</button>
                 <hr class="mobile-menu-divider">
                 <div class="mobile-connection-section">
-                    <span class="mobile-section-label">Connection</span>
+                    <span class="mobile-section-label">Connections</span>
                     <div class="mobile-connection-list"></div>
                     <button class="mobile-nav-item mobile-add-connection">+ Add Connection</button>
-                    <button class="mobile-nav-item mobile-authorize hidden">Authorize</button>
                 </div>
             </div>
         </div>
