--- a/src/pages/app/app.html
+++ b/src/pages/app/app.html
@@ -23,6 +23,7 @@
                 <button class="tab-link" data-tab="apex">Apex</button>
                 <button class="tab-link" data-tab="rest-api">REST API</button>
                 <button class="tab-link" data-tab="events">Platform Events</button>
+                <button class="tab-link" data-tab="utils">Utils</button>
                 <button class="tab-link" data-tab="settings">Settings</button>
                 <div class="nav-overflow-dropdown hidden">
                     <button class="tab-link nav-overflow-trigger">
@@ -83,6 +84,7 @@
                     <button class="mobile-nav-item" data-tab="apex">Apex</button>
                     <button class="mobile-nav-item" data-tab="rest-api">REST API</button>
                     <button class="mobile-nav-item" data-tab="events">Platform Events</button>
+                    <button class="mobile-nav-item" data-tab="utils">Utils</button>
                     <button class="mobile-nav-item" data-tab="settings">Settings</button>
                 </nav>
                 <hr class="mobile-menu-divider">
@@ -106,6 +108,8 @@
             <events-tab id="events" class="tab-content"></events-tab>
 
             <rest-api-tab id="rest-api" class="tab-content"></rest-api-tab>
+
+            <utils-tab id="utils" class="tab-content"></utils-tab>
 
             <settings-tab id="settings" class="tab-content"></settings-tab>
         </main>
