--- a/src/pages/app/app.html
+++ b/src/pages/app/app.html
@@ -13,9 +13,7 @@
         
         <nav class="tab-nav">
             <button class="hamburger-btn" aria-label="Menu">
-                <svg width="20" height="20" viewBox="0 0 20 20" fill="currentColor">
-                    <path d="M2 4.5h16a.5.5 0 010 1H2a.5.5 0 010-1zm0 5h16a.5.5 0 010 1H2a.5.5 0 010-1zm0 5h16a.5.5 0 010 1H2a.5.5 0 010-1z"/>
-                </svg>
+                {{icon:hamburger}}
             </button>
             <div class="nav-brand"><img src="../../icon.png" alt="" class="nav-brand-icon">sftools</div>
         </nav>
@@ -25,9 +23,7 @@
             <div class="mobile-menu-header">
                 <div class="nav-brand"><img src="../../icon.png" alt="" class="nav-brand-icon">sftools</div>
                 <button class="mobile-menu-close" aria-label="Close menu">
-                    <svg width="20" height="20" viewBox="0 0 20 20" fill="currentColor">
-                        <path d="M4.646 4.646a.5.5 0 01.708 0L10 9.293l4.646-4.647a.5.5 0 01.708.708L10.707 10l4.647 4.646a.5.5 0 01-.708.708L10 10.707l-4.646 4.647a.5.5 0 01-.708-.708L9.293 10 4.646 5.354a.5.5 0 010-.708z"/>
-                    </svg>
+                    {{icon:closeLarge}}
                 </button>
             </div>
             <div class="mobile-menu-content">
