--- a/src/pages/app/app.html
+++ b/src/pages/app/app.html
@@ -10,7 +10,7 @@
     <body>
         <div class="app-container">
             <nav class="tab-nav">
-                <button class="hamburger-btn" aria-label="Menu">{{icon:hamburger}}</button>
+                <button class="hamburger-btn" aria-label="Menu"><sf-icon name="hamburger"></sf-icon></button>
                 <div class="nav-brand">
                     <img src="../../icon.png" alt="" class="nav-brand-icon" />sftools
                 </div>
@@ -24,7 +24,7 @@
                         <img src="../../icon.png" alt="" class="nav-brand-icon" />sftools
                     </div>
                     <button class="mobile-menu-close" aria-label="Close menu">
-                        {{icon:closeLarge}}
+                        <sf-icon name="closeLarge"></sf-icon>
                     </button>
                 </div>
                 <div class="mobile-menu-content">
