--- a/src/modules/c/appMain/appMain.html
+++ b/src/modules/c/appMain/appMain.html
@@ -90,7 +90,7 @@
                 <c-utils-tab></c-utils-tab>
             </template>
             <template lwc:if={showSettingsTab}>
-                <c-settings-tab-placeholder></c-settings-tab-placeholder>
+                <c-settings-tab></c-settings-tab>
             </template>
         </main>
     </div>
